--- a/index.html
+++ b/index.html
@@ -10,24 +10,34 @@
     <div class="calculator">
         <input type="text" id="display" disabled>
         <div class="buttons">
-            <button class="operator" id="clear">C</button>
-            <button class="operator" id="backspace">&lt;</button>
-            <button class="operator" id="divide">/</button>
-            <button class="number" id="seven">7</button>
-            <button class="number" id="eight">8</button>
-            <button class="number" id="nine">9</button>
-            <button class="operator" id="multiply">*</button>
-            <button class="number" id="four">4</button>
-            <button class="number" id="five">5</button>
-            <button class="number" id="six">6</button>
-            <button class="operator" id="subtract">-</button>
-            <button class="number" id="one">1</button>
-            <button class="number" id="two">2</button>
-            <button class="number" id="three">3</button>
-            <button class="operator" id="add">+</button>
-            <button class="number" id="zero">0</button>
-            <button class="number" id="decimal">.</button>
-            <button class="operator" id="equals">=</button>
+            <div class="row">
+                <button class="operator" id="clear">C</button>
+                <button class="operator" id="backspace">&lt;</button>
+                <button class="operator" id="divide">/</button>
+                <button class="operator" id="multiply">*</button>
+            </div>
+            <div class="row">
+                <button class="number" id="seven">7</button>
+                <button class="number" id="eight">8</button>
+                <button class="number" id="nine">9</button>
+                <button class="operator" id="subtract">-</button>
+            </div>
+            <div class="row">
+                <button class="number" id="four">4</button>
+                <button class="number" id="five">5</button>
+                <button class="number" id="six">6</button>
+                <button class="operator" id="add">+</button>
+            </div>
+            <div class="row">
+                <button class="number" id="one">1</button>
+                <button class="number" id="two">2</button>
+                <button class="number" id="three">3</button>
+                <button class="operator" id="equals">=</button>
+            </div>
+            <div class="row">
+                <button class="number" id="zero">0</button>
+                <button class="number" id="decimal">.</button>
+            </div>
         </div>
     </div>
 
