--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 <body>
     <div class="calculator">
         <input type="text" id="display" disabled>
-        <div class="grid">
-            <button class="button operator" id="clear">C</button>
-            <button class="button operator" id="backspace">&lt;</button>
-            <button class="button operator" id="divide">/</button>
-            <button class="button operator" id="multiply">*</button>
-            <button class="button number" id="seven">7</button>
-            <button class="button number" id="eight">8</button>
-            <button class="button number" id="nine">9</button>
-            <button class="button operator" id="subtract">-</button>
-            <button class="button number" id="four">4</button>
-            <button class="button number" id="five">5</button>
-            <button class="button number" id="six">6</button>
-            <button class="button operator" id="add">+</button>
-            <button class="button number" id="one">1</button>
-            <button class="button number" id="two">2</button>
-            <button class="button number" id="three">3</button>
-            <button class="button operator" id="equals">=</button>
-            <button class="button number" id="zero">0</button>
-            <button class="button number" id="decimal">.</button>
+        <div class="buttons">
+            <button class="button" id="clear">C</button>
+            <button class="button" id="backspace">&lt;</button>
+            <button class="button" id="divide">/</button>
+            <button class="button" id="multiply">*</button>
+            <button class="button" id="seven">7</button>
+            <button class="button" id="eight">8</button>
+            <button class="button" id="nine">9</button>
+            <button class="button" id="subtract">-</button>
+            <button class="button" id="four">4</button>
+            <button class="button" id="five">5</button>
+            <button class="button" id="six">6</button>
+            <button class="button" id="add">+</button>
+            <button class="button" id="one">1</button>
+            <button class="button" id="two">2</button>
+            <button class="button" id="three">3</button>
+            <button class="button" id="equals">=</button>
+            <button class="button" id="zero">0</button>
+            <button class="button" id="decimal">.</button>
         </div>
     </div>
 
