--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="calculator">
+    <div class="calculator-box">
         <input type="text" id="display" disabled>
-        <div class="buttons">
-            <button class="operator" id="clear">C</button>
-            <button class="operator" id="backspace">&lt;</button>
-            <button class="operator" id="divide">/</button>
-            <button class="number" id="seven">7</button>
-            <button class="number" id="eight">8</button>
-            <button class="number" id="nine">9</button>
-            <button class="operator" id="multiply">*</button>
-            <button class="number" id="four">4</button>
-            <button class="number" id="five">5</button>
-            <button class="number" id="six">6</button>
-            <button class="operator" id="subtract">-</button>
-            <button class="number" id="one">1</button>
-            <button class="number" id="two">2</button>
-            <button class="number" id="three">3</button>
-            <button class="operator" id="add">+</button>
-            <button class="number" id="zero">0</button>
-            <button class="number" id="decimal">.</button>
-            <button class="operator" id="equals">=</button>
+        <div class="button-grid">
+            <button class="button" id="clear">C</button>
+            <button class="button" id="backspace">←</button>
+            <button class="button" id="divide">/</button>
+            <button class="button" id="multiply">*</button>
+            <button class="button" id="seven">7</button>
+            <button class="button" id="eight">8</button>
+            <button class="button" id="nine">9</button>
+            <button class="button" id="subtract">-</button>
+            <button class="button" id="four">4</button>
+            <button class="button" id="five">5</button>
+            <button class="button" id="six">6</button>
+            <button class="button" id="add">+</button>
+            <button class="button" id="one">1</button>
+            <button class="button" id="two">2</button>
+            <button class="button" id="three">3</button>
+            <button class="button" id="equals">=</button>
+            <button class="button" id="zero">0</button>
+            <button class="button" id="decimal">.</button>
         </div>
     </div>
 
